# software-analysis-and-design

./: README.md
architecture-python/: README.md
architecture-python/app/: Makefile  cli.py  manage.py  pyproject.toml  pytest.ini
architecture-python/app/application/: config.py
architecture-python/app/config/: testing.json
architecture-python/app/rentomatic/repository/: postgres_objects.py
architecture-python/app/rentomatic/requests/: room_list.py
architecture-python/app/rentomatic/serializers/: room.py
architecture-python/app/tests/: conftest.py  test_responses.py
architecture-python/app/tests/domain/: test_room.py
architecture-python/app/tests/repository/: __init__.py  test_memrepo.py
architecture-python/app/tests/requests/: test_room_list.py
architecture-python/app/tests/rest/: test_room.py
architecture-python/app/tests/serializers/: test_room.py
architecture-python/app/tests/use_cases/: test_room_list.py
architecture-theory/: README.md
clean-coding/: README.md
pytest/: README.md
rest-api-design/: README.md
